add css for image-not-available

--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -272,6 +272,13 @@ p {
   height: auto;
 }
 
+.img-not-available {
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .product-price>h1 {
   font-size: large;
   color: black;
