--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -388,7 +388,6 @@ input[type="number"]:focus-visible {
   animation: spin 1s linear infinite;
   display: inline-block;
 }
-
 @keyframes spin {
   0% {
     transform: rotate(0deg);
@@ -447,7 +446,11 @@ p:last-child {
   margin-top: 0;
   margin-bottom: 0;
 }
-
+#solar-combo {
+  width: 100%!important;
+  margin: auto;
+  text-align: left;
+}
 
 
 /* #ShopifyChat {
@@ -477,7 +480,7 @@ p:last-child {
   background-color: #000;
   gap: 10rem;
   border-radius: 20px;
-  margin-left: -70px;
+  /* margin-left: -70px; */
 }
 
 .custom-cart_btn p {
@@ -528,12 +531,20 @@ p:last-child {
   opacity: .5 !important;
 }
 
-
+.ques-1-description, .ques-2-description, .ques-4-description, .ques-5-description, .ques-6-description, .ques-7-description, .ques-8-description, p.option-desc,.ques-1 h1, .ques-2 h1, .ques-3 h1, .ques-4 h1, .ques-5 h1, .ques-6 h1, .ques-7 h1, .ques-8 h1, .distance-question>p {
+  text-align: left!important;
+}
 /* ========================================================================== */
 
 /* Default desktop styles (already in your code) */
 
 @media screen and (max-width: 1024px) {
+  /* #solar-combo {
+    width: 90%!important;
+    margin: 0 auto!important;
+    text-align: justify;
+    padding: 0 5rem!important;
+} */
 
   .total-price {
     display: flex;
@@ -583,6 +594,9 @@ p:last-child {
 }
 
 @media screen and (max-width: 989px) {
+  /* .float-container-body {
+    width: 95%;
+} */
   .custom-cart_btn .cartButton {
     width: max-content;
   }
@@ -609,7 +623,36 @@ p:last-child {
 }
 
 @media screen and (max-width: 768px) {
-
+  .cart-btn {
+    margin-left: 0px;
+}
+  /* #solar-combo {
+    width: 100%!important;
+    margin: auto;
+    text-align: justify;
+    padding: 0 1.5rem!important;
+} */
+  h1.main-page-title {
+    font-weight: 400;
+    font-size: 35px;
+}
+input[type=radio] {
+  margin-right: 5px;
+  margin-top: 0;
+}
+/* .float-container-body {
+  width: 100%;
+  padding: 0 1.5rem;
+} */
+.option-details label, .runtimeOption-details label {
+display: flex;
+align-items: center;
+font-size: 14px;
+color: #000;
+justify-content: center;
+font-size: 13px;
+margin-bottom: 5px;
+}
   .ques-1-description,
   .ques-2-description,
   .ques-4-description,
@@ -789,7 +832,7 @@ p:last-child {
     text-align: center;
     width: 100%;
     border-radius: 5px 5px 0 0;
-  }
+}
 
   .cart-btn {
     display: flex;
@@ -834,6 +877,11 @@ p:last-child {
 }
 
 @media screen and (max-width: 425px) {
+  .option-image {
+    width: 100%;
+    height: 110px;
+    border-radius: 4px;
+}
   .ques-1-answer span {
     font-size: 12px !important;
   }
@@ -1235,6 +1283,10 @@ p:last-child {
 
 
 @media screen and (max-width: 320px) {
+  .ques-1-description, .ques-2-description, .ques-4-description, .ques-5-description, .ques-6-description, .ques-7-description, .ques-8-description, p.option-desc, .ques-1 h1, .ques-2 h1, .ques-3 h1, .ques-4 h1, .ques-5 h1, .ques-6 h1, .ques-7 h1, .ques-8 h1, .distance-question>p {
+    padding: 0 0.5rem;
+}
+
   .cart-btn {
     display: flex;
     justify-content: space-between;
@@ -1328,21 +1380,22 @@ p:last-child {
     border: 2px solid blue;
     border-radius: 5px;
   }
-
-  .option-image {
-    width: 105px;
+  /* .option-image {
+    width: 100%;
     height: 100px;
-    border-radius: 4px;
-  }
+    border-radius: 8px;
+    padding: 0 0.5rem;
+} */
 
-  .option-details label {
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-    color: #000;
-    justify-content: center;
-    font-size: 13px;
-  }
+.option-details label, .runtimeOption-details label {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  color: #000;
+  justify-content: center;
+  font-size: 13px;
+  margin-bottom: 5px;
+}
 
   .option-desc {
     font-size: 13px;
@@ -1497,11 +1550,11 @@ p:last-child {
     border-radius: 5px;
   }
 
-  .option-image {
+  /* .option-image {
     width: 140px;
     height: 100px;
     border-radius: 4px;
-  }
+  } */
 
   .displayBTU {
     margin: 10px 0 0 10px;
