--- a/app/routes/styles/syncSettings.css
+++ b/app/routes/styles/syncSettings.css
@@ -1,3 +1,8 @@
+.setting-containar{
+  margin-bottom: 100px;
+
+}
+
 .variant-image {
   width: 10%;
 }
@@ -16,6 +21,3 @@
   margin-bottom: 30px;
 }
 
-.sync-list-continer{
-  margin-bottom: 50px;
-}
