--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -3,7 +3,7 @@ body {
   font-style: normal;
   font-weight: 400;
   color: #3d4246;
-  line-height: 1.3;
+  /* line-height: 1.3; */
 }
 
 .banner-image-container {
@@ -12,7 +12,7 @@ body {
   right: 50%;
   margin-left: -50vw;
   margin-right: -50vw;
-  width: 100vw;
+  /* width: 100vw; */
 }
 
 p {
@@ -447,14 +447,19 @@ p:last-child {
   margin-bottom: 0;
 }
 /* -------------------------------------------- */
-.footer-block.grid__item,
+/* .footer-block.grid__item,
 .sub_menu_list {
   line-height: 28px;
+} */
+
+
+.footer-block__details-content p {
+  margin-bottom: 1em;
 }
 #solar-combo {
   width: 100% !important;
   margin: auto;
-  /* text-align: left; */
+  line-height: 1.4;
 }
 
 .productsImage img {
@@ -543,11 +548,6 @@ p:last-child {
   padding: 5px 15px;
   cursor: not-allowed;
   opacity: 0.5 !important;
-}
-
-.footer-block.grid__item,
-.sub_menu_list {
-  line-height: 28px;
 }
 
 .ques-1-description,
