--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -204,6 +204,7 @@ p {
   width: 155px;
   height: 110px;
   border-radius: 4px;
+  aspect-ratio: 4/3;
 }
 
 .option-details label {
@@ -914,6 +915,7 @@ p.option-desc,
     width: 100%;
     height: 110px;
     border-radius: 4px;
+    aspect-ratio: 4/3;
   }
   .ques-1-answer span {
     font-size: 12px !important;
@@ -1419,12 +1421,6 @@ p.option-desc,
     border: 2px solid blue;
     border-radius: 5px;
   }
-  /* .option-image {
-    width: 100%;
-    height: 100px;
-    border-radius: 8px;
-    padding: 0 0.5rem;
-} */
 
   .option-details label,
   .runtimeOption-details label {
@@ -1586,12 +1582,6 @@ p.option-desc,
     border: 2px solid blue;
     border-radius: 5px;
   }
-
-  /* .option-image {
-    width: 140px;
-    height: 100px;
-    border-radius: 4px;
-  } */
 
   .displayBTU {
     margin: 10px 0 0 10px;
